--- a/sender/build.gradle
+++ b/sender/build.gradle
@@ -11,4 +11,5 @@ repositories {
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.11'
     compile group: 'com.rabbitmq', name: 'amqp-client', version: '4.1.0'
+    compile group: 'org.apache.httpcomponents', name: 'httpcore', version: '4.4.6'
 }
