use spring-amqp & create async service

--- a/receiver/src/main/resources/application.properties
+++ b/receiver/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url = jdbc:mysql://temalab-egyescsapat.cvypbedsgmrp.eu-central-1.rds.amazonaws.com:3306/rabbit?useUnicode=yes&characterEncoding=UTF-8
 spring.datasource.username=rabbitapp
 spring.datasource.password=rabbitpass
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
