--- a/receiver/build.gradle
+++ b/receiver/build.gradle
@@ -10,8 +10,8 @@ repositories {
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.11'
-    compile group: 'com.rabbitmq', name: 'amqp-client', version: '4.1.0'
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: '1.5.2.RELEASE'
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter-amqp', version: '1.5.2.RELEASE'
     compile group: 'org.hibernate', name: 'hibernate-core', version: '5.2.8.Final'
     compile group: 'mysql', name: 'mysql-connector-java', version: '6.0.5'
 }
